# tantivy-jpc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  post_build.rs
.github/: run_go.sh
.github/workflows/: tantivy-jpc.yml  tantivy_jpc.yml
go-client/: go.mod  go.sum  main.go  tantivy-jpc.h  tantivy_jpc.h
go-client/examples/: main.go
go-client/tantivy/: tantivy.go  tantivy_builder.go  tantivy_document.go  tantivy_index.go  tantivy_query_parser.go  tantivy_schema.go  tantivy_searcher.go  tantivy_test.go
go-client/tantivy/packaged/include/: tantivy-jpc.h
go-client/tantivy/packaged/lib/darwin-aarch64/: dummy.go
src/: lib.rs  tokenizer.rs  tsession_builder.rs  tsession_document.rs  tsession_index.rs  tsession_query_parser.rs  tsession_schema.rs  tsession_searcher.rs  tsession_tests.rs
