[package]
name = "tantivy_jpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
paste = "1.0.0"
take_mut = "0.2.2"
chrono = "*"
thiserror = "1.0.30"
serde = "*"
serde_json = "*"
serde_derive = "*"
log = "0.4.14"
tantivy = "0.19.0"
lazy_static = "*"
env_logger = "*"
tempdir = "*"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
