[package]
name = "tantivy-jpc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
paste = "1.0.0"
take_mut = "0.2.2"
chrono = "*"
thiserror = "1.0.30"
serde = "*"
serde_json = "*"
serde_derive = "*"
log = "0.4.14"
tantivy = { git = "https://github.com/JanFalkin/tantivy.git", branch = "main" }
#tantivy = { path = "../tantivy"}
lazy_static = "*"
env_logger = "*"
tempdir = "*"
stderrlog = "0.5.4"
scopeguard = "1.1.0"
rand = "0.8.5"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
