[package]
name = "tantivy-jpc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.24.5"

[dependencies]
paste = "1.0.0"
take_mut = "0.2.2"
chrono = "0.4.26"
thiserror = "1.0.30"
serde = "1.0.166"
serde_json = "1.0.99"
serde_derive = "1.0.166"
log = "0.4.14"
tantivy = { git = "https://github.com/JanFalkin/tantivy.git", rev = "4e18354ced438c8f8f55c869ea4dc573ecdbcd57" }
lazy_static = "1.4.0"
env_logger = "0.10.0"
tempdir = "0.3.7"
stderrlog = "0.5.4"
scopeguard = "1.1.0"
rand = "0.8.5"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
